@@ -1,0 +1,16 @@
+#Binary Files
+*.o
+queuecode
+algorithm
+framework
+
+#Test Code
+testenv
+testenv.c
+testenv.o
+
+#MacOS stuff
+~/.DS_Store
+
+#VScode stuff
+.vscode
