@@ -4,7 +4,7 @@ CC=gcc
 DEPS = algorithm.h
 
 %.o: %.c $(DEPS)
-	$(CC) $(LDFLAGS) -c -o $@ $< $(CFLAGS)
+	$(CC) $(LDFLAGS) -c -o $@ $< $(CFLAGS) -lm
 
 framework: framework.o wrapper.o algorithm.o global.o
 	$(CC) $(LDFLAGS) -o framework framework.o wrapper.o algorithm.o global.o -lm
