@@ -1,0 +1,11 @@
+#This is the top level makefile that performs all automated tests. Bash or whatever script calls to run tests
+
+#Each algorithm has its own folder and its own makefile
+
+#For each algorithm folder (each folder will have its own line unless you can make a loop somehow)
+#1. switch to the algorithm folder
+#2. Call make
+#3. Call the script that runs tests
+#4. Switch to Framework folder
+#5. Run make clean
+#6. Repeat
